# CENTRA-NF

./: Cargo.toml  progress_status.md  test_output.ir  test_sample.cnf  test_syntax_error.cnf
.github/: copilot-instructions.md
crates/centra-nf-cli/: Cargo.toml
crates/centra-nf-cli/src/: main.rs
crates/centra-nf-lsp/src/: handler.rs
crates/centra-nf-lsp/tests/: integration_tests.rs
crates/cnf-compiler/src/: ast.rs  ir.rs  lexer.rs  parser.rs
crates/cnf-compiler/tests/: integration.rs
docs/: lsp-features.md
